edition = "2023";

package otterscale.scope.v1;

import "api/annotations.proto";
option go_package = "github.com/otterscale/otterscale/api/scope/v1;pb";

service ScopeService {
  rpc ListScopes(ListScopesRequest) returns (ListScopesResponse) {
    option (otterscale.api.feature) = {
      name: "scp-general"
    };
  };

  rpc CreateScope(CreateScopeRequest) returns (Scope) {
    option (otterscale.api.feature) = {
      name: "scp-general"
    };
  };
}

message Scope {
  string uuid = 1;
  string name = 2;
  string type = 3;
  string provider_type = 4;
  string life = 5;
  string status = 6;
  string agent_version = 7;
  bool controller = 8;
  int64 machine_count = 21;
  int64 core_count = 22;
  int64 unit_count = 23;
}

message ListScopesRequest {}

message ListScopesResponse {
  repeated Scope scopes = 1;
}

message CreateScopeRequest {
  string name = 1;
}
